# auto_use_repo

./: BUILD.bazel  MODULE.bazel  README.md  defs.bzl  extensions.bzl  go.mod  go.sum
cmd/: BUILD.bazel  main.go
internal/: BUILD.tpl
update/: BUILD.bazel  update.go
