load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

alias(
    name = "update",
    actual = "//cmd:update",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
)
