module(
    name = "auto_use_repo",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "gazelle", version = "0.28.0")
bazel_dep(name = "rules_go", version = "0.37.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_buildtools")

auto_use_repo = use_extension("//:extensions.bzl", "auto_use_repo")
use_repo(auto_use_repo, update_attrs = "internal_only_update_attrs")
