load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "update",
    srcs = ["update.go"],
    importpath = "github.com/fmeum/auto_use_repo/update",
    visibility = ["//cmd:__pkg__"],
    deps = [
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_bazelbuild_buildtools//labels:go_default_library",
    ],
)
